Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.bib
+++ b/FACTIUNN.bib
@@ -6,7 +6,7 @@
   address = {Birmingham},
   author = {Krčevinac, Slobodan},
 }
-@article{LWP
+@article{LWP,
   author={Packer,L.,W. and Batistoni,P. and Bradnam,S. C. and Conroy,S. and Ghani,Z. and Gilbert,M. R. and Laszyńska,E. and Lengar,I. and Nobs,C. R. and Pillon,M. and Popovichev,S. and Raj,P. and Stamatelatos,I. E. and Vasilopoulou,T. and Wójcik-Gargula,A. and Worrall,R.},
   year={2018},
   month={11},
@@ -35,9 +35,9 @@
 }
 
 @online{FISPACT,
-  author = {{Culham Centre for Fusion Energy}},
+  author = {Culham Centre for Fusion Energy},
   title = {UKAEA: FISTACT-II},
-  year = 2017,
+  year = {2017},
   url = {http://www.ccfe.ac.uk/fispact.aspx},
   urldate = {06/09/2017}
 }
@@ -265,7 +265,7 @@ This one talks about cross entropy as well.
 @online{ReginattoBluePresentation,
   title={Unfolding techniques for neutron spectrometry},
   url={http://old.enea.it/com/web/convegni/ComputationalDosimetry081007/Reginatto.pdf},
-  urldate = {10/06/2019}
+  urldate = {10/06/2019},
   organization={Physikalisch-Technische Bundesanstalt},
   author={Reginatto, Marcel}
 }
@@ -304,7 +304,7 @@ keywords = {Fusion-Diagnostics ; Neutron-Detector ; Activation-Analysis ; Gamma-
   address      = {Culham Science Centre, Abingdon OX14 3EB},
 }
 @unpublished{EmbargoPaper_LWP,
-  author       = {L. W. Packera,P. Batistoni, S. C. Bradnam, S. Conroy, Z. Ghani, M. R. Gilbert, E. Laszyńska, I. Lengar, C.R.Nobs, M. Pillon, S. Popovichev, P. Raj , I.E. Stamatelatos, T. Vasilopoulou, A. Wójcik-Gargula, R. Worrall, JET contributors}, 
+  author       = {Packer, L. W. and Batistoni, P. and  Bradnam, S. C. and Conroy, S. and Ghani, Z. and Gilbert, M. R and Laszyńska, E. and Lengar, I. and Nobs, C.R. and Pillon, M. and Popovichev, S. and Raj, P. and Stamatelatos, I.E. and Vasilopoulou, T. and Wójcik-Gargula, A. and Worrall, R. and JET contributors}, 
   title        = {Neutron spectrum and fluence determination at the ITER material irradiation stations at JET},
   month        = 5,
   year         = 2019
@@ -418,11 +418,12 @@ language = {eng},
 author = {Del Rosario Martinez-Blanco, Ma. and Ornelas-Vargas, Gerardo and Castañeda-Miranda, Celina Lizeth and Solís-Sánchez, Luis Octavio and Castañeda-Miranada, Rodrigo and Vega-Carrillo, Héctor René and Celaya-Padilla, Jose M and Garza-Veloz, Idalia and Martínez-Fierro, Margarita and Ortiz-Rodríguez, José Manuel},
 keywords = {Bpnn ; Grnn ; Bss ; Ann ; Pnn ; Rbf ; IAEA ; Mse ; Artificial Neural Networks ; Neutron Spectrometry ; Bonner Spheres ; Unfolding ; Grnn Architecture},
 }
-@unpublished{ukaea_unfolding_support_report_march2017
+
+@unpublished{ukaea_unfolding_support_report_march2017,
 title = {UKAEA-R-17-NT1 Unfolding code support: progress report},
 author = {Packer, Lee W. and Gilbert, Mark R. and Naish, Jonathan and Bradnam, Steven},
 month = 3,
-year = 2017,
+year = 2017
 }
 @article{BeeColony,
 issn = {0144-8420},
