Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.bib
+++ b/FACTIUNN.bib
@@ -102,7 +102,27 @@ language = {eng},
 author = {Colling, Bethany and Batistoni, P. and Bradnam, S.C. and Ghani, Z. and Gilbert, M.R. and Nobs, C.R. and Packer, L.W. and Pillon, M. and Popovichev, S.},
 keywords = {Jet ; Iter ; Tbm ; Activation ; Neutronics},
 }
-
+@online{AndrewNgNormalization,
+  title={Normalizing Inputs (C2W1L09)},
+  url={https://www.youtube.com/watch?v=FDCfw-YqWTE},
+  urldate={30/06/2019},
+  author={Ng, Andrew},
+  organization = {Deeplearning.ai},
+  year={2017}
+}
+@techreport{SAND-II,
+  title={A COMPUTER-AUTOMATED ITERATIVE METHOD FOR NEUTRON FLUX SPECTRA DETERMINATION BY FOIL ACTIVATION. VOLUME 1. A STUDY OF THE ITERATIVE METHOD},
+  author={McElroy, WN and Berg, S and Crockett, T and Hawkins, RG},
+  year={1967},
+  institution={ATOMICS INTERNATIONAL CANOGA PARK CA}
+}
+@online{TensorflowOverfitting,
+title={explore overfitting and underfitting tensorflow core 2019},
+url={https://www.tensorflow.org/tutorials/keras/overfit_and_underfit#add_weight_regularization},
+urldate={25/06/2019},
+organization={Google},
+year={2019}
+}
 @article{LWP_LTIS,
   title={Activation of ITER materials in JET: nuclear characterisation experiments for the long-term irradiation station},
   author={Packer, LW and Batistoni, P and Bradnam, SC and Colling, B and Conroy, Sean and Ghani, Z and Gilbert, MR and Jednorog, S and {\L}aszy{\'n}ska, E and Leichtle, D and others},
@@ -166,6 +186,14 @@ title = {Neutron spectrum unfolding using genetic algorithm in a Monte Carlo sim
 language = {eng},
 author = {Suman, Vitisha and Sarkar, P.K.},
 keywords = {Spectrum Unfolding ; Genetic Algorithm ; Monte Carlo Simulation ; Neutron Spectrum ; Gamcd},
+}
+
+@incollection{RDANNM,
+  title={Robust design of artificial neural networks methodology in neutron spectrometry},
+  author={Ortiz-Rodríguez, José Manuel and del Rosario Martínez-Blanco, Ma and Viramontes, Jose Manuel Cervantes and Vega-Carrillo, Héctor René},
+  booktitle={Artificial Neural Networks-Architectures and Applications},
+  year={2013},
+  publisher={IntechOpen}
 }
 
 @article{ANewTheorem_CrossEntropy,
@@ -419,7 +447,7 @@ author = {Del Rosario Martinez-Blanco, Ma. and Ornelas-Vargas, Gerardo and Casta
 keywords = {Bpnn ; Grnn ; Bss ; Ann ; Pnn ; Rbf ; IAEA ; Mse ; Artificial Neural Networks ; Neutron Spectrometry ; Bonner Spheres ; Unfolding ; Grnn Architecture},
 }
 
-@unpublished{ukaea_unfolding_support_report_march2017,
+@unpublished{IAEAUKAEACompendium,
 title = {UKAEA-R-17-NT1 Unfolding code support: progress report},
 author = {Packer, Lee W. and Gilbert, Mark R. and Naish, Jonathan and Bradnam, Steven},
 month = 3,
